# F150Infotainment

./: CMakeLists.txt  Main.qml  MapDisplay.qml  PrepareBuild.sh  README.md  SetupEnvironment.sh  SmallMediaPlayer.qml  main.cpp
AppLibraries/SettingsLib/: CMakeLists.txt  SettingsLib.cpp  SettingsLib.h  SettingsLib_global.h
AppLibraries/SpotifyLib/: CMakeLists.txt  SpotifyLib.cpp  SpotifyLib.h  SpotifyLib_global.h  libinfo.json
Apps/SettingsApp/: CMakeLists.txt  Main.qml  Resources.qrc  appinfo.json  main.cpp
Apps/SettingsApp/Pages/: Software.qml
Apps/Spotify/: CMakeLists.txt  Main.qml  appinfo.json  main.cpp
Apps/Spotify/Controllers/: SpotifyController.cpp  SpotifyController.h
ControllerFactory/: CMakeLists.txt  ControllerFactory.cpp  ControllerFactory.h
Controllers/: AppManager.cpp  AppManager.h  UpdateManager.cpp  UpdateManager.h  navigation.cpp  navigation.h  system.cpp  system.h  updatemanager.cpp  updatemanager.h
ThemeLib/: CMakeLists.txt  ThemeManager.cpp  ThemeManager.h
